--- a/css/profile.css
+++ b/css/profile.css
@@ -153,3 +153,46 @@
     color: #ffb302;
     border-bottom: 1px solid #ffb302;
 }
+#orderUser .header{
+    border-radius: 5px;
+    background-color: #6c757d75;
+    margin-top: 20px;
+}
+#orderUser .header h3{
+    margin: 0;
+}
+#orderUser .btn-dropdown ion-icon{
+    color: black;
+    font-size: 23px;
+    transition: all .175s linear;
+}
+.pay_body tr{
+    position: relative;
+}
+.pay_body .labelIdCheck{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    margin: 0;
+    padding: 0;
+    left: 0;
+}
+.action_btn:hover{
+    color: #ffb302;
+}
+.action_btn:focus{
+    color: #dc3545;
+    background: transparent;
+    outline: none;
+    box-shadow: none;
+}
+#checkout-payment {
+    font-size: 20px;
+    color: black;
+}
+@media screen and (max-width: 520px){
+    #myTabProfile{
+        flex-direction: column;
+    }
+}
